Adding file structure of calculator

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                     </a>
                  </li>
                 <li class="menu-item">
-                    <a href="#">
+                    <a href="./project/">
                         <i class="fa fa-briefcase"></i> <span>Portfolio</span>
                     </a>
                  </li>
                 <li class="menu-item">
-                    <a href="./asset/">
+                    <a href="./Tools/calculator/calculator.html">
                         <i class="fa fa-calculator"></i> <span>Calculator</span>
                     </a>
                  </li>
