--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="menu">
 
                 <li class="menu-item ">
-                    <a href="#" >
+                    <a href="./" >
                         <i class="fa fa-home">   </i> <span>Home</span>
                     </a>
                  </li>
@@ -35,7 +35,7 @@
                     </a>
                  </li>
                 <li class="menu-item">
-                    <a href="./project/">
+                    <a href="./webpage/portfolio.html">
                         <i class="fa fa-briefcase"></i> <span>Portfolio</span>
                     </a>
                  </li>
@@ -62,8 +62,9 @@
     <!-- **  Hero Section -->
     <section class="hero">
         <div class="hero-text">
-            <h1> I am a passionate Frontend Web Developer .</h1>
-            <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat alias cupiditate placeat laudantium explicabo adipisci commodi odio mollitia animi numquam.</h2>
+            <h1>Hello, My Name is Abhay Kumar.</h1>
+            <h3>A full-stack Web Developer. </h3>
+            <h3>Specialized in creating sleek  and premium UI/UX design.</h3>
 
         </div>
         <div class="hero-img">
